--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -34,9 +34,10 @@
     <div class="row mt-3 text-center">
         <div class="col-3 ml-auto">
             <div class="list-group">
+               #  for data in datas
                 <a href="#" class="list-group-item list-group-item-action active text-center" tabindex="-1"
                    aria-disabled="true">Rack A </a>
-                <a href="#" class="list-group-item list-group-item-action text-center">Fs-01<img src="WebApp\Red X.png"
+                <a href="#" class="list-group-item list-group-item-action text-center">DB-01<img src="WebApp\Red X.png"     # datas.ServerName
                                                                                                  class="float-right"></a>
                 <a href="#" class="list-group-item list-group-item-action text-center">Head-01<img
                         src="WebApp\Red X.png" class="float-right"></a>
@@ -46,6 +47,7 @@
                         src="WebApp\Red X.png" class="float-right"></a>
                 <a href="#" class="list-group-item list-group-item-action text-center">Lic-01<img
                         src="C:\Users\Mia\Documents\Spring2020\WebApp\Red.png" class="float-right"></a>
+                #  endfor %}
             </div>
 
         </div>
