Real time page no longer hardcoded. -Ben

--- a/templates/RealTimeDataOverviewTemp.html
+++ b/templates/RealTimeDataOverviewTemp.html
@@ -67,28 +67,28 @@
     <tr>
       <th scope="row"><h3><img src="WebApp\Red X.png" class="float-left"></h3></th>
         <td><h3 class="text-center">CPU Usage:</h3></td>
-        <td><h3 class="text-danger">85%</h3></td>
+        <td><h3 class="text-danger">{{ metric.Cpu }}%</h3></td>  {# metric.Cpu  metric.Cpu.query.filter(Metric.ServerID == Server.ServerId) #}
     </tr>
     <tr>
         <th scope="row"><h3><img src="WebApp\Red X.png" class="float-left"></h3></th>
          <td><h3>RAM Usage:</h3></td>
-        <td><h3 class="text-success">44%</h3></td>
+        <td><h3 class="text-success">{{ metric.Ram }}%</h3></td>
 
     </tr>
     <tr>
         <th scope="row"><h3><img src="WebApp\Red X.png" class="float-left"></h3></th>
         <td><h3>Disk Usage:</h3></td>
-        <td><h3 class="text-success">60%</h3></td>
+        <td><h3 class="text-success">{{ metric.Disk }}%</h3></td>
     </tr>
   <tr>
       <th scope="row"><h3><img src="WebApp\Red X.png" class="float-left"></h3></th>
       <td><h3>GPU Usage:</h3></td>
-      <td><h3 class="text-warning">55%</h3></td>
+      <td><h3 class="text-warning">{{ metric.Gpu }}%</h3></td>
     </tr>
   <tr>
       <th scope="row"><h3><img src="WebApp\Red X.png" class="float-left"></h3></th>
        <td><h3>Ping Status:</h3></td>
-      <td><h3 class="text-success">Responding </h3></td>
+      <td><h3 class="text-success">{{ metric.PingLatency }}ms - Responding </h3></td>
 
     </tr>
   </tbody>
