Real time page no longer hardcoded. -Ben

--- a/templates/RealTimeDataOverviewTemp.html
+++ b/templates/RealTimeDataOverviewTemp.html
@@ -67,7 +67,7 @@
     <tr>
       <th scope="row"><h3><img src="WebApp\Red X.png" class="float-left"></h3></th>
         <td><h3 class="text-center">CPU Usage:</h3></td>
-        <td><h3 class="text-danger">{{ metric.Cpu }}%</h3></td>  {# metric.Cpu  metric.Cpu.query.filter(Metric.ServerID == Server.ServerId) #}
+        <td><h3 class="text-danger">{{ metric.Cpu }}%</h3></td>
     </tr>
     <tr>
         <th scope="row"><h3><img src="WebApp\Red X.png" class="float-left"></h3></th>
