--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -11,6 +11,9 @@
         </div>
     </div>
     <div class="row mt-3 text-center">
+        <div class="col-2">
+            <a class="btn btn-secondary btn-lg" href="/masterlist" role="button">Master List</a>
+        </div>
         <div class="col-10 ml-auto">
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle float-md-right" type="button" id="dropdownMenuButton"
