--- a/templates/MasterList.html
+++ b/templates/MasterList.html
@@ -15,7 +15,7 @@
     <!--Home Button and Server-->
     <div class="row mt-3 text-center">
         <div class="col-2">
-            <a class="btn btn-secondary btn-lg" href="HomePage.html" role="button">Home</a>
+            <a class="btn btn-secondary btn-lg" href="/" role="button">Home</a>
         </div>
         <div class="col-10 ">
             <div class="card">
