--- a/templates/RealTimeDataOverviewTemp.html
+++ b/templates/RealTimeDataOverviewTemp.html
@@ -67,7 +67,7 @@
     <tr>
       <th scope="row"><h3><img src="WebApp\Red X.png" class="float-left"></h3></th>
         <td><h3 class="text-center">CPU Usage:</h3></td>
-        <td><h3 class="text-danger">{{ metric.Cpu }}%</h3></td>
+        <td><h3 class="text-danger"><a href="/usage-cpu/{{ server.ServerId }}">{{ metric.Cpu }}%</a></h3></td>
     </tr>
     <tr>
         <th scope="row"><h3><img src="WebApp\Red X.png" class="float-left"></h3></th>
@@ -101,9 +101,9 @@
     <!--Services Table-->
     <div class="row mt-3 text-center">
         <div class="col-lg-12 ml-auto">
-            <table class="table table-bordered">
+            <table class="table table-bordered table-striped">
 
-                <thead>
+                <thead class="table-dark">
                 <tr>
                     <th scope="col">Service Name</th>
                     <th scope="col">Status</th>
@@ -111,16 +111,18 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <th scope="row">Service A</th>
-                    <td>Running</td>
-                    <td>5d10h20m</td>
-                </tr>
-                <tr>
-                    <th scope="row">Service B</th>
-                    <td>Running</td>
-                    <td>1d20h20m</td>
-                </tr>
+                {% for service in service %}
+                    <tr>
+                        <th scope="row">{{ service.ServiceName }}</th>
+                        <td>{{ service.Status }}</td>
+                        {#                    <td>5d10h20m</td>#}
+                    </tr>
+                {% endfor %}
+                {#                <tr>#}
+                {#                    <th scope="row">Service B</th>#}
+                {#                    <td>Running</td>#}
+                {#                    <td>1d20h20m</td>#}
+                {#                </tr>#}
 
                 </tbody>
 
