--- a/templates/Usage-CPUTemp.html
+++ b/templates/Usage-CPUTemp.html
@@ -1,3 +1,4 @@
+{% from '_formhelpers.html' import render_field %}
 {% extends 'layout.html' %}
 
 {% block title %}
@@ -35,82 +36,92 @@
     </div>
     <div class="row text-center mt-3 ml-auto">
         <div class="col-10">
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon3">Start & End Date</span>
-                </div>
-                <input type="date" placeholder="09/01/2019" aria-label="start Date" class="form-control">
-                <input type="date" placeholder="10/01/2019" aria-label="End Date" class="form-control">
+            <form method="post">
+                {{ form.csrf_token }}
+                {{ render_field(form.startdate) }}
+                {{ render_field(form.enddate) }}
+                <input type="submit" value="update">
+
+                {#                <div class="input-group mb-3">#}
+                {#                    <div class="input-group-prepend">#}
+                {#                        <span class="input-group-text" id="basic-addon3">Start & End Date</span>#}
+                {#                    </div>#}
+                {#                    <input type="text" placeholder="09/01/2019" aria-label="start date" class="form-control">#}
+                {#                    <input type="text" placeholder="10/01/2019" aria-label="end date" class="form-control">#}
+                {#                </div>#}
+                {#            </div>#}
+                {#            <div class="col-2">#}
+                {#                <a class="btn btn-success" href="#" onclick="window.location.reload(true);" role="button">Refresh</a>#}
+                {#                <input type="submit" value="update">#}
+                {#            </div>#}
+            </form>
+        </div>
+    </div>
+
+
+        <div class="row ml-2">
+            <ol>
+                {% for d in date %}
+                    <li> {{ d }} </li>
+                {% endfor %}
+            </ol>
+        </div>
+
+        <div class="row text-center m-5">
+            <div class="col">
+                <canvas id="myChart"></canvas>
+            </div>
+            <script>
+                var ctx = document.getElementById('myChart').getContext('2d');
+                var chart = new Chart(ctx, {
+                    // The type of chart we want to create
+                    type: 'line',
+
+                    // The data for our dataset
+                    data: {
+                        labels: [{% for d in date %} "{{ d }}", {% endfor %}],
+                        datasets: [{
+                            label: 'My First dataset',
+                            backgroundColor: 'rgb(99, 255, 132)',
+                            borderColor: 'rgb(0, 0, 0)',
+                            data: [{% for u in usage %} "{{ u }}", {% endfor %}]
+                        }]
+                    },
+
+                    // Configuration options go here
+                    options: {}
+                });
+            </script>
+        </div>
+        <div class="row">
+            <div class="col mt-5 mb-5">
+                <table class="table table-striped table-bordered">
+                    <thead class="table-dark">
+                    <tr>
+                        <th scope="col">Date/Time</th>
+                        <th scope="col">CPU Usage (%): Hi-Avg-Low</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>9/1/2019-00:00</td>
+                        <td>60-40-20</td>
+                    </tr>
+                    <tr>
+                        <td>9/2/2019-00:00</td>
+                        <td>62-50-30</td>
+                    </tr>
+                    <tr>
+                        <td>...</td>
+                        <td>...</td>
+                    </tr>
+                    <tr>
+                        <td>10/1/2019-00:00</td>
+                        <td>70-52-40</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
-        <div class="col-2">
-            <a class="btn btn-success" href="#" onclick="window.location.reload(true);" role="button">Refresh</a>
-        </div>
-    </div>
-
-    <div class="row ml-2">
-        <ol>
-            {% for d in date %}
-                <li> {{ d }} </li>
-            {% endfor %}
-        </ol>
-    </div>
-
-    <div class="row text-center m-5">
-        <div class="col">
-            <canvas id="myChart"></canvas>
-        </div>
-        <script>
-            var ctx = document.getElementById('myChart').getContext('2d');
-            var chart = new Chart(ctx, {
-                // The type of chart we want to create
-                type: 'line',
-
-                // The data for our dataset
-                data: {
-                    labels: [{% for d in date %} "{{ d }}", {% endfor %}],
-                    datasets: [{
-                        label: 'My First dataset',
-                        backgroundColor: 'rgb(99, 255, 132)',
-                        borderColor: 'rgb(0, 0, 0)',
-                        data: [{% for u in usage %} "{{ u }}", {% endfor %}]
-                    }]
-                },
-
-                // Configuration options go here
-                options: {}
-            });
-        </script>
-    </div>
-    <div class="row">
-        <div class="col mt-5 mb-5">
-            <table class="table table-striped table-bordered">
-                <thead class="table-dark">
-                <tr>
-                    <th scope="col">Date/Time</th>
-                    <th scope="col">CPU Usage (%): Hi-Avg-Low</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>9/1/2019-00:00</td>
-                    <td>60-40-20</td>
-                </tr>
-                <tr>
-                    <td>9/2/2019-00:00</td>
-                    <td>62-50-30</td>
-                </tr>
-                <tr>
-                    <td>...</td>
-                    <td>...</td>
-                </tr>
-                <tr>
-                    <td>10/1/2019-00:00</td>
-                    <td>70-52-40</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
 
 {% endblock content %}
