--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,21 +1,25 @@
+{# provides fromat and bootstrap for other html docs #}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 
     <meta charset="UTF-8">
 
-    {% block title %}
+    {% block title %} {# Title given by other pages #}
     {% endblock %}
 
+    {# Bootstrap CDN #}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 </head>
 <body>
 <div class="container">
-    {% block content %}{% endblock %}
+    {% block content %}{% endblock %} {# Overwritten by other pages #}
 </div>
 
+{# Scripts for bootstrap #}
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
