--- a/templates/MasterList.html
+++ b/templates/MasterList.html
@@ -1,33 +1,37 @@
-{% extends 'layout.html' %}
+
+{% extends 'layout.html' %} {# Inherits format from layout.html #}
 
 
-{% block title %}
-    <title>Master List</title>
+{% block title %} {# Overides layout.html default title #}
+    <title>Master List</title> {# Title - shown in tab on browser #}
 {% endblock title %}
 
 {% block content %}
-    <!--Header-->
-    <div class="row mt-3 text-center">
+
+    <div class="row mt-3 text-center"> {# Row for page header #}
         <div class="col-12 ml-auto p-3 mb-2 bg-secondary text-white">
             <h1>Server System Monitoring Tool</h1>
         </div>
     </div>
-    <!--Home Button and Server-->
-    <div class="row mt-3 text-center">
-        <div class="col-2">
+
+    <div class="row mt-3 text-center"> {# Home button and Page title #}
+
+        <div class="col-2"> {# Home Button #}
             <a class="btn btn-secondary btn-lg" href="/" role="button">Home</a>
         </div>
-        <div class="col-10 ">
+
+        <div class="col-10 "> {# Page title #}
             <div class="card">
                 <div class="card-body border border-dark font-weight-bold">
                     <h3>Master List</h3>
                 </div>
             </div>
         </div>
+
     </div>
 
-    <!--Racks-->
-    <div class="row mt-3 text-center">
+    <div class="row mt-3 text-center"> {# Master List table #}
+
         <div class="col-12 ">
             <table class="table table-bordered  table-secondary ">
                 <thead>
@@ -81,7 +85,7 @@
                 <tr class="table-light">
                     <td scope="row"></td>
                     <td>
-                        <div class="input-group">
+                        <div class="input-group"> {# Server Type dropdown #}
                             <select class="custom-select" id="inputGroupSelect04"
                                     aria-label="Example select with button addon">
                                 <option selected>Choose Server Type</option>
@@ -96,7 +100,7 @@
                         </div>
                     </td>
                     <td class="table-active">
-                        <div class="input-group mb-3">
+                        <div class="input-group mb-3"> {# Text Box Input #}
                             <input type="text" class="form-control"
                                    aria-label="Text input with segmented dropdown button">
                         </div>
@@ -106,17 +110,18 @@
             </table>
         </div>
     </div>
-    <div class="row mt-3 text-center">
+    <div class="row mt-3 text-center"> {# Add Delete Buttons #}
         <div class="col-09">
-            <a class="btn btn-danger btn-lg float-md-right" href="#" role="button">Delete</a>
+            <a class="btn btn-danger btn-lg float-md-right" href="#" role="button">Delete</a> {# Delete Button #}
         </div>
         <div class="col-11 ml-auto">
 
-            <a class="btn btn-success btn-lg float-md-right" href="#" role="button">Add</a>
+            <a class="btn btn-success btn-lg float-md-right" href="#" role="button">Add</a> {# Add button #}
         </div>
     </div>
 
 {% endblock content %}
+
 <!--
 <div class = "row mt-3 text-center">
          <div class="col-2">
