--- a/templates/RealTimeDataOverviewTemp.html
+++ b/templates/RealTimeDataOverviewTemp.html
@@ -1,37 +1,41 @@
-{% extends 'layout.html' %}
+{# NON HARD-CODED VERSION #}
 
-{% block title %}
-    <title>Current Data - {{ server.ServerName }}</title>
+{% extends 'layout.html' %} {# inherits format from layout.html #}
+
+{% block title %} {# Overides layout.html default title #}
+    <title>Current Data - {{ server.ServerName }}</title> {# Title - shown in tab on browser #}
 {% endblock title %}
 
 {% block content %}
-    <!--Title-->
-    <div class="row mt-3 text-center">
+
+    <div class="row mt-3 text-center"> {# Page header #}
         <div class="col-12 ml-auto p-3 mb-2 bg-secondary text-white">
             <h1>Server System Monitoring Tool</h1>
         </div>
     </div>
 
-    <!--Home Button and Server-->
-    <div class="row mt-3 text-center">
-        <div class="col-2">
+    <div class="row mt-3 text-center"> {# Home button & Rack & Server Names #}
+
+        <div class="col-2"> {# Home Button #}
             <a class="btn btn-secondary btn-lg" href="/" role="button">Home</a>
         </div>
-        <div class="col-10 ">
+
+        <div class="col-10 "> {# Rack & Server Names  #}
             <div class="card">
                 <div class="card-body border border-dark font-weight-bold">
                     <h5>Rack A | Server: {{ server.ServerName }}</h5>
                 </div>
             </div>
         </div>
+
     </div>
 
-    <!--Server Specs-->
-    <div class="row mt-3 text-center">
+    <div class="row mt-3 text-center"> {# Server Specs #}
         <div class="col-12 ">
+
             <table class="table table-borderless  table-secondary ">
                 <thead>
-                <tr>
+                <tr> {# Spec's names #}
                     <th scope="col">Server Specifications</th>
                     <th scope="col">Operating System:</th>
                     <th scope="col">CPU | Cores</th>
@@ -42,7 +46,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
+                <tr> {# Spec's Values #}
                     <td scope="row"></td>
                     <td>{{ server.Os }}</td>
                     <td>{{ server.Cpu }} | {{ server.CpuCores }}</td>
@@ -53,17 +57,16 @@
                 </tr>
                 </tbody>
             </table>
+
         </div>
     </div>
 
-    <!--Usage Table-->
-    <div class="row mt-3 text-center">
-     <span class="col-12 border border-dark ">
+    <div class="row mt-3 text-center"> {# Usage Table #}
+        <span class="col-12 border border-dark ">
  <div class="col-12 ml-auto">
 
    <table class="table table-borderless table-hover">
-
-  <tbody>
+       <tbody>
     <tr>
       <th scope="row"><h3><img src="WebApp\Red X.png" class="float-left"></h3></th>
         <td><h3 class="text-center">CPU Usage:</h3></td>
@@ -80,52 +83,46 @@
         <td><h3>Disk Usage:</h3></td>
         <td><h3 class="text-success">{{ metric.Disk }}%</h3></td>
     </tr>
-  <tr>
+    <tr>
       <th scope="row"><h3><img src="WebApp\Red X.png" class="float-left"></h3></th>
       <td><h3>GPU Usage:</h3></td>
       <td><h3 class="text-warning">{{ metric.Gpu }}%</h3></td>
     </tr>
-  <tr>
+    <tr>
       <th scope="row"><h3><img src="WebApp\Red X.png" class="float-left"></h3></th>
        <td><h3>Ping Status:</h3></td>
       <td><h3 class="text-success">{{ metric.PingLatency }}ms - Responding </h3></td>
 
     </tr>
   </tbody>
-</table>
-     </div>
-      </span>
+    </table>
+
+            </div>
+        </span>
 
     </div>
 
-    <!--Services Table-->
-    <div class="row mt-3 text-center">
+    <div class="row mt-3 text-center"> {# Services Table #}
         <div class="col-lg-12 ml-auto">
-            <table class="table table-bordered table-striped">
 
+            <table class="table table-bordered table-striped">
                 <thead class="table-dark">
                 <tr>
                     <th scope="col">Service Name</th>
                     <th scope="col">Status</th>
-                    <th scope="col">Runtime</th>
                 </tr>
                 </thead>
+
                 <tbody>
-                {% for service in service %}
+
+                {% for service in service %} {# Gets all services for this server #}
                     <tr>
                         <th scope="row">{{ service.ServiceName }}</th>
                         <td>{{ service.Status }}</td>
-                        {#                    <td>5d10h20m</td>#}
                     </tr>
                 {% endfor %}
-                {#                <tr>#}
-                {#                    <th scope="row">Service B</th>#}
-                {#                    <td>Running</td>#}
-                {#                    <td>1d20h20m</td>#}
-                {#                </tr>#}
 
                 </tbody>
-
             </table>
         </div>
     </div>
