--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -1,3 +1,6 @@
+
+{# Used for the Chart date range forms #}
+
 {% macro render_field(field) %}
   <dt>{{ field.label }}
   <dd>{{ field(**kwargs)|safe }}
