Updated DB -BEN

--- a/templates/Usage-CPUTemp.html
+++ b/templates/Usage-CPUTemp.html
@@ -68,13 +68,13 @@
     </div>
 
 
-        <div class="row ml-2"> {# Lists the dates in date range in order | FOR TESTING/DEBUGGING #}
-            <ol>
-                {% for d in date %}
-                    <li> {{ d }} </li>
-                {% endfor %}
-            </ol>
-        </div>
+{#        <div class="row ml-2"> {# Lists the dates in date range in order | FOR TESTING/DEBUGGING #}
+{#            <ol>#}
+{#                {% for d in date %}#}
+{#                    <li> {{ d }} </li>#}
+{#                {% endfor %}#}
+{#            </ol>#}
+{#        </div>#}
 
         <div class="row text-center m-5">{# Chart for usage #}
 
