--- a/templates/Usage-Disk.html
+++ b/templates/Usage-Disk.html
@@ -92,7 +92,7 @@
                         labels: [{% for d in date %} "{{ d }}", {% endfor %}], {# Dates #}
                         datasets: [{
                             label: 'My First dataset',
-                            backgroundColor: 'rgb(99, 255, 132)',
+                            backgroundColor: 'rgb(255,201,111)',
                             borderColor: 'rgb(0, 0, 0)',
                             data: [{% for u in usage %} "{{ u }}", {% endfor %}] {# Usages #}
                         }]
