Fixed chart. Set TEMPORARY default date range. Fixed home page to display servers in their racks. Color coded charts based on the metric. fixed some of the tables on the charts page
-BEN

--- a/templates/HomePageV2.html
+++ b/templates/HomePageV2.html
@@ -53,7 +53,7 @@
             </div>
 
             {% for server in server %}
-                {% if server.RackID == rack.RackID %}
+                {% if server.RackID == rack.RackId %}
                 {# grabs all servers in DB | NEEDS TO BE CHANGED TO ONLY GRAB SERVERS IN THIS RACK #}
                 <ul class="list-group list-group-flush"> {# lists servers that link to their Real Time page #}
                     <a href="/real-time-data-overview/{{ server.ServerId }}"
