--- a/templates/Usage-Disk.html
+++ b/templates/Usage-Disk.html
@@ -117,34 +117,12 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>9/1/2019-00:00</td>
-                        <td>60-40-20</td>
-                        <td>60-40-20</td>
-                        <td>60-40-20</td>
-                        <td>60-40-20</td>
-                    </tr>
-                    <tr>
-                        <td>9/2/2019-00:00</td>
-                        <td>62-50-30</td>
-                        <td>62-50-30</td>
-                        <td>62-50-30</td>
-                        <td>62-50-30</td>
-                    </tr>
-                    <tr>
-                        <td>...</td>
-                        <td>...</td>
-                        <td>...</td>
-                        <td>...</td>
-                        <td>...</td>
-                    </tr>
-                    <tr>
-                        <td>10/1/2019-00:00</td>
-                        <td>70-52-40</td>
-                        <td>70-52-40</td>
-                         <td>70-52-40</td>
-                        <td>70-52-40</td>
-                    </tr>
+                        {% for d, u in zip(date, usage) %}
+                            <tr>
+                                <td>{{ d }}</td>
+                                <td>{{ u }}%</td>
+                            </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
