--- a/templates/Usage-GPU.html
+++ b/templates/Usage-GPU.html
@@ -1,4 +1,3 @@
-
 {# NEW NON HARD-CODED VERSION #}
 
 {% from '_formhelpers.html' import render_field %} {# import neede for chard range forms #}
@@ -36,7 +35,7 @@
 
     </div>
 
-{#    </div>#}
+    {#    </div>#}
     <div class="row text-center m-2"> {# Displays this servers GPU usage #}
         <div class="col-12">
             <h2 class="text-danger"> GPU Usage: <b>{{ ametric.Gpu }}%</b></h2>
@@ -68,73 +67,63 @@
     </div>
 
 
-{#        <div class="row ml-2"> {# Lists the dates in date range in order | FOR TESTING/DEBUGGING #}
-{#            <ol>#}
-{#                {% for d in date %}#}
-{#                    <li> {{ d }} </li>#}
-{#                {% endfor %}#}
-{#            </ol>#}
-{#        </div>#}
+    {#        <div class="row ml-2"> {# Lists the dates in date range in order | FOR TESTING/DEBUGGING #}
+    {#            <ol>#}
+    {#                {% for d in date %}#}
+    {#                    <li> {{ d }} </li>#}
+    {#                {% endfor %}#}
+    {#            </ol>#}
+    {#        </div>#}
 
-        <div class="row text-center m-5">{# Chart for usage #}
+    <div class="row text-center m-5">{# Chart for usage #}
 
-            <div class="col">
-                <canvas id="myChart"></canvas>
-            </div>
-            <script>
-                var ctx = document.getElementById('myChart').getContext('2d');
-                var chart = new Chart(ctx, {
-                    {# The type of chart we want to create #}
-                    type: 'line',
-
-                    {# The data for our dataset #}
-                    data: {
-                        labels: [{% for d in date %} "{{ d }}", {% endfor %}], {# Dates #}
-                        datasets: [{
-                            label: 'My First dataset',
-                            backgroundColor: 'rgb(122,211,132)',
-                            borderColor: 'rgb(0, 0, 0)',
-                            data: [{% for u in usage %} "{{ u }}", {% endfor %}] {# Usages #}
-                        }]
-                    },
-
-                    {# Configuration options go here #}
-                    options: {}
-                });
-            </script>
+        <div class="col">
+            <canvas id="myChart"></canvas>
         </div>
+        <script>
+            var ctx = document.getElementById('myChart').getContext('2d');
+            var chart = new Chart(ctx, {
+                {# The type of chart we want to create #}
+                type: 'line',
+
+                {# The data for our dataset #}
+                data: {
+                    labels: [{% for d in date %} "{{ d }}", {% endfor %}], {# Dates #}
+                    datasets: [{
+                        label: 'My First dataset',
+                        backgroundColor: 'rgb(122,211,132)',
+                        borderColor: 'rgb(0, 0, 0)',
+                        data: [{% for u in usage %} "{{ u }}", {% endfor %}] {# Usages #}
+                    }]
+                },
+
+                {# Configuration options go here #}
+                options: {}
+            });
+        </script>
+    </div>
 
 
 
-        <div class="row"> {# GPU Usage table #}
-            <div class="col mt-5 mb-5">
-                <table class="table table-striped table-bordered">
-                    <thead class="table-dark">
-                    <tr>
-                        <th scope="col">Date/Time</th>
-                        <th scope="col">GPU Usage (%): Hi-Avg-Low</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>9/1/2019-00:00</td>
-                        <td>60-40-20</td>
-                    </tr>
-                    <tr>
-                        <td>9/2/2019-00:00</td>
-                        <td>62-50-30</td>
-                    </tr>
-                    <tr>
-                        <td>...</td>
-                        <td>...</td>
-                    </tr>
-                    <tr>
-                        <td>10/1/2019-00:00</td>
-                        <td>70-52-40</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+    <div class="row"> {# GPU Usage table #}
+        <div class="col mt-5 mb-5">
+            <table class="table table-striped table-bordered">
+                <thead class="table-dark">
+                <tr>
+                    <th scope="col">Date/Time</th>
+                    <th scope="col">GPU Usage (%): Hi-Avg-Low</th>
+                </tr>
+                </thead>
+                <tbody>
+                    {% for d, u in zip(date, usage) %}
+                        <tr>
+                            <td>{{ d }}</td>
+                            <td>{{ u }}%</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
+    </div>
 
 {% endblock content %}
