--- a/templates/RealTimeDataOverviewTemp.html
+++ b/templates/RealTimeDataOverviewTemp.html
@@ -23,7 +23,7 @@
         <div class="col-10 "> {# Rack & Server Names  #}
             <div class="card">
                 <div class="card-body border border-dark font-weight-bold">
-                    <h5>Rack A | Server: {{ server.ServerName }}</h5>
+                    <h5>Fix This | Server: {{ server.ServerName }}</h5>
                 </div>
             </div>
         </div>
@@ -37,11 +37,14 @@
                 <thead>
                 <tr> {# Spec's names #}
                     <th scope="col">Server Specifications</th>
-                    <th scope="col">Operating System:</th>
+                    <th scope="col">Operating System</th>
                     <th scope="col">CPU | Cores</th>
                     <th scope="col">GPU</th>
                     <th scope="col">Memory</th>
                     <th scope="col">Model</th>
+                    <th scope="col">Building</th>
+                    <th scope="col">Room</th>
+                    <th scope="col">Last Updated</th>
 
                 </tr>
                 </thead>
@@ -53,6 +56,9 @@
                     <td>{{ server.Gpu }}</td>
                     <td>{{ server.Memory }}Gb</td>
                     <td>{{ server.Model }}</td>
+                    {#<td>{{ location.BuildingNumber }}</td>
+                    <td>{{ location.Room }}</td>#}
+                    <td>{{ metric.Time }}</td>
 
                 </tr>
                 </tbody>
@@ -91,7 +97,7 @@
     <tr>
       <th scope="row"><h3><img src="WebApp\Red X.png" class="float-left"></h3></th>
        <td><h3>Ping Status:</h3></td>
-      <td><h3 class="text-success">{{ metric.PingLatency }}ms - Responding </h3></td>
+      <td><h3 class="text-success"><a href="/usage-Ping/{{ server.ServerId }}">{{ metric.PingLatency }}ms - Responding </a> </h3></td>
 
     </tr>
   </tbody>
@@ -108,6 +114,7 @@
             <table class="table table-bordered table-striped">
                 <thead class="table-dark">
                 <tr>
+                    <th scope="col">Service ID</th>
                     <th scope="col">Service Name</th>
                     <th scope="col">Status</th>
                 </tr>
@@ -117,8 +124,62 @@
 
                 {% for service in service %} {# Gets all services for this server #}
                     <tr>
+                        <th scope="row">{{ service.ServiceId }}</th>
                         <th scope="row">{{ service.ServiceName }}</th>
                         <td>{{ service.Status }}</td>
+                    </tr>
+                {% endfor %}
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="row mt-3 text-center"> {# Database Table #}
+        <div class="col-lg-12 ml-auto">
+
+            <table class="table table-bordered table-striped">
+                <thead class="table-dark">
+                <tr>
+                    <th scope="col">Database ID</th>
+                    <th scope="col">Database Name</th>
+                    <th scope="col">Status</th>
+                </tr>
+                </thead>
+
+                <tbody>
+
+                {% for db in database %} {# Gets all databases for this server #}
+                    <tr>
+                        <th scope="row">{{ db.DatabaseId }}</th>
+                        <th scope="row">{{ db.DatabaseName }}</th>
+                        <td>{{ db.Status }}</td>
+                    </tr>
+                {% endfor %}
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="row mt-3 text-center"> {# Database Table #}
+        <div class="col-lg-12 ml-auto">
+
+            <table class="table table-bordered table-striped">
+                <thead class="table-dark">
+                <tr>
+                    <th scope="col">Job Name</th>
+                    <th scope="col">User</th>
+                    <th scope="col">Remaining Time</th>
+                </tr>
+                </thead>
+
+                <tbody>
+
+                {% for rj in runningjob %} {# Gets all databases for this server #}
+                    <tr>
+                        <th scope="row">{{ rj.JobName }}</th>
+                        <th scope="row">{{ rj.User }}</th>
+                        <td>{{ rj.ReservedTime }}</td>
                     </tr>
                 {% endfor %}
 
